name:                text-boxes
version:             0.0.0.1
synopsis:            rectangle-shaped text blocks.
-- description:
homepage:            https://github.com/8084/text-boxes
license:             PublicDomain
author:              klntsky
maintainer:          klntsky@gmail.com
-- category:
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10
source-repository head
  type: git
  location: git://github.com/8084/text-boxes.git

library
  exposed-modules:   TextBox
                   , TextBox.Data
                   , TextBox.StringLike
                   , TextBox.StringLike.String
                   , TextBox.StringLike.Text
                   , TextBox.Utils
                   , TextBox.Utils.Transform
                   , TextBox.Operators
                   , TextBox.Internals
  other-modules:
  other-extensions:  MultiParamTypeClasses
                   , RankNTypes
                   , FunctionalDependencies
                   , TypeSynonymInstances
                   , FlexibleInstances
                   , OverloadedStrings
  build-depends:     base >=4.10 && <4.11
                   , split >=0.2 && < 0.3
                   , text >=1.2 && <1.3
  hs-source-dirs:    src
  default-language:  Haskell2010

Test-Suite test
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  other-modules:     Test.TextBox.StringLike.String
                   , Test.TextBox.StringLike.Text
                   , Test.TextBox.Utils
                   , Test.TextBox.Utils.Transform
  hs-source-dirs:    test
  build-depends:     text-boxes
                   , base >=4.10 && <4.11
                   , split >=0.2 && < 0.3
                   , QuickCheck >= 2.10 && <2.11
                   , HUnit
                   , hspec >= 2.4.0 && <2.5
                   , containers == 0.5.*
                   , text >=1.2 && <1.3
  default-language:  Haskell2010

Test-Suite print-examples
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  other-modules:
  hs-source-dirs:    example
  build-depends:     text-boxes
                   , base >=4.10 && <4.11
                   , split >=0.2 && < 0.3
                   , containers == 0.5.*
  default-language:  Haskell2010
